<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.shkurtagashi.energieinformatik.RegisterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="34dp"
        android:layout_centerVertical="true"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/full_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/username_value"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/empatica_value"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Empatica ID"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingRight="35dp"
                android:paddingTop="10dp"
                android:text="@string/gender_label"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/genderRadioButtons"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobutton_male"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/male"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radiobutton_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="18sp"
                    android:layout_weight="1" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/age_label"
                android:textSize="18sp" />

        <Spinner
            android:id="@+id/age_range"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/program_label"
                android:textSize="18sp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/work_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <!--  Status Label -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/status_label"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/status_choices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Submit"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Cancel"/>

        </LinearLayout>
        <!-- Submit Button -->



    </LinearLayout>
</RelativeLayout>
